--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "lib/printf"]
 	path = lib/printf
 	url = https://github.com/qmk/printf
+[submodule "keyboards/moonlander/keymaps/mkl"]
+	path = keyboards/moonlander/keymaps/mkl
+	url = git@github.com:mersinvald/moonlander
